--- a/index.html
+++ b/index.html
@@ -784,6 +784,9 @@
             </div>
           </div>
         </div>
+
+        <div id="stop-arrow"></div>
+
         <div class="row">
           <!-- form inputs -->
           <div class="col-md-6">
@@ -898,7 +901,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- up arrow -->
     <div class="up-arrow">
