some fixes and animations added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     <!-- Bootrstrap -->
     <link rel="stylesheet" href="./vendors/css/bootstrap.min.css" />
 
+    <!-- Splitting -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/splitting/dist/splitting.css"
+    />
+
+    <!-- my custom effects -->
+    <link rel="stylesheet" href="/css/effects.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/splitting/dist/splitting-cells.css"
+    />
+
     <!-- Main Style -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -93,13 +107,13 @@
                 <p>Build with great love!</p>
               </div>
               <div class="home-btns">
-                <a href="#" class="btn btn-outline-light btn-download"
+                <a href="#" class="btn btn-outline-primary btn-download"
                   >Download</a
                 >
-                <a href="#" class="btn btn-outline-light btn-tour"
-                  >Take a Tour</a
-                >
-                <i class="fa fa-angle-down"></i>
+                <a href="#" class="btn btn-outline-primary btn-tour"
+                  >Take a Tour
+                  <i class="fas fa-angle-double-down"></i>
+                </a>
               </div>
             </div>
             <div class="col-3 offset-1">
@@ -934,6 +948,9 @@
 
     <!-- Bootstrap -->
     <script src="./vendors/js/bootstrap.min.js"></script>
+
+    <!-- Splitting -->
+    <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
 
     <!-- Main JS -->
     <script src="./js/index.js"></script>
